# k_admin_backend

./: Cargo.toml  README.md  req.http
src/: main.rs
src/config/: db_config.rs
src/dto/: app_dto.rs  event_dto.rs  mod.rs  student_dto.rs  user_dto.rs
src/helper/: app_errors.rs  helper.rs  mod.rs  response.rs
src/middleware/: auth_middeleware.rs  mod.rs
src/models/: app.rs  events.rs  mod.rs  student_model.rs  user_models.rs
src/mongoRepo/: mod.rs  mongorepos.rs
src/repo/: app_repo.rs  events_repo.rs  mod.rs  student_repo.rs  user_repo.rs
src/router/: app_router.rs  event_router.rs  mod.rs  student_routers.rs  user_router.rs
src/service/: app_service.rs  event_service.rs  jwt_service.rs  mod.rs  student_service.rs  user_service.rs
